# ExtendedNumerics

./: .gitignore  BenchmarkDriver.cpp  CMakeLists.txt  LICENSE  Number.h  TODO.txt  TestDriver.cpp  fix_boost_include.sh  main.cpp  scratchbox.cpp  transfer_benchmarks.sftp  transfer_benchmarks.sh  wasmCMakeLists.txt  wasm_make.sh
ExtendedNumerics/: Bignum.cpp  Bignum.h  ExtendedNumerics.h  Fixnum.h  Ratnum.cpp  Ratnum.h  util.h
benchmarks/: BenchmarkNumerics.cpp  _benchmark_settings_and_defs.hpp  benchmark_bignum_fixnum_int64_t_comparison.cpp  benchmark_bignum_fixnum_int64_t_comparison.hpp  benchmark_driver.cpp  benchmark_operation_symmetry.cpp  benchmark_operation_symmetry.hpp  benchmark_perf_per_operand_type.cpp  benchmark_perf_per_operand_type.hpp  benchmark_ratnum_numeric_overhead.cpp  benchmark_ratnum_numeric_overhead.hpp  benchmark_settings_and_defs.hpp  doubling_behavior.hpp  fixnum_bignum_delineation.cpp  gbench.cpp  manual_bench.cpp  random_numeric_generators.hpp  time_benchmark_operation.hpp  time_bignum_ops.cpp  time_bignum_ops.hpp  time_exact_complexnum_ops.cpp  time_exact_complexnum_ops.hpp  time_ratnum_ops.cpp  time_ratnum_ops.hpp
cmake/modules/: FindGMP.cmake
python_test/: ExtendedNumerics.i  make_python_wrapper.sh  setup.py  test.py
python_test/extension_benchmarks/: benchmark.py
python_test/test_suites/: config_and_defs.py  run_random_tests.py  test_bignum.py  test_exact_complexnum.py  test_fixnum.py  test_inexact_complexnum.py  test_numeric.py  test_ratnum.py  util_operations.py  util_random.py  util_representation.py  util_types.py
results/: native_ratnum_numeric_overhead  wasm_doubling_behavior  wasm_ratnum_numeric_overhead
src/: Bignum.cpp  Bignum.h  BignumInternal.cpp  BignumInternal.hpp  Boost_Bignum.cpp  Boost_Bignum.h  Boost_Ratnum.cpp  Boost_Ratnum.h  DynamicDoubleDispatch.cpp  ExactComplexnumInternal.cpp  ExactComplexnumInternal.hpp  ExactNum.cpp  ExtendedNumerics.cpp  ExtendedNumerics.h  ExtendedNumerics.hpp  Fixnum.cpp  Fixnum.h  InexactComplexnumInternal.cpp  InexactComplexnumInternal.hpp  Number.h  Numeric.cpp  Numeric.hpp  NumericOperations.hpp  Ratnum.cpp  RatnumInternal.cpp  RatnumInternal.hpp  util.h  util.hpp
src_bak/: Boost_Bignum.cpp  Boost_Bignum.h  Boost_Ratnum.cpp  ExactNum.cpp  ExtendedNumerics.hpp  NumericOperations.h
summaries/: .~lock.Operation symmetry wasm (avg of 20 runs).ods#  .~lock.int64 fixnum bignum operation time comparison (avg of 20 runs).ods#  Operation symmetry wasm (avg of 20 runs).ods  Per operand operation doubling behavior (avg of 20 runs).ods  int64 fixnum bignum operation time comparison (avg of 20 runs).ods  native_time_per_operation_comparisons.ods  test.ods  time_per_operation_comparisons.ods
tst/: ExtendedNumerics.cpp  bignum_tests.cpp  exactnum_tests.cpp  ratnum_tests.cpp
